Fixed role and playbook nam; now role compliant to many hosts, not 3 node only

--- a/roles/elastic_cluster/defaults/main.yml
+++ b/roles/elastic_cluster/defaults/main.yml
@@ -1,6 +1,4 @@
 ---
 aptkey: "https://artifacts.elastic.co/GPG-KEY-elasticsearch"
 apturl: "deb https://artifacts.elastic.co/packages/6.x/apt stable main"
-cluster_name: "elasticsearch_3_nodes"
-
-
+cluster_name: "elasticsearch_cluster"
